Resolve some issues of sonarlint